apps/honcho/overlays/nishir-tailnet/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: honcho
spec:
  hostnames:
    - honcho.i.shikanime.studio
  parentRefs:
    - name: honcho
      sectionName: https
  rules:
    - backendRefs:
        - name: honcho
          port: http
